# datanarate

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  FINAL_AUDIT_REPORT.md  LICENSE  PHASE_6_AUDIT_REPORT.md  PHASE_7_FINAL_AUDIT.md  PHASE_8_ENTERPRISE_READINESS.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  vercel.json
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  datanarrate.db  pytest.ini  requirements-dev.txt  requirements.min.txt  requirements.simple.txt  requirements.txt  test.db
backend/.chromadb/: chroma.sqlite3
backend/alembic/: env.py
backend/app/: main.py  main_simple.py  main_simple_working.py  main_temp.py
backend/scripts/: init_ecommerce_data.py  init_ecommerce_simple.py  init_metadata.py
backend/tests/: conftest.py  test_api.py  test_database.py  test_evaluation.py  test_health.py  test_repositories.py  test_services.py  test_sql_validator.py
docker/backend/: Dockerfile  (+1 more)
docs/: 01_PRD.md  02_System_Architecture.md  03_Database_Design.md  04_Sample_Business_Dataset.md  05_ER_Diagram.md  06_API_Design.md  07_Folder_Structure.md  08_Security_Plan.md  09_Development_Roadmap.md  10_Acceptance_Criteria.md  BRANCH_STRATEGY.md  COMMIT_CONVENTION.md  SECURITY.md  VERIFICATION.md  demo-scripts.md  portfolio.md  project-assets-checklist.md
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts.timestamp-1781929335017-bc9a7ac59e03a8.mjs
temp/: test_ollama.py  test_pipeline.py  test_query.py  test_query_sync.py
(+97 files in other folders)
